# EntityAlignment-Nexus

./: .gitignore  README.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs.yml
Notebook/: 01_naea_dbp15k.ipynb  02_bootea_dbp15k.ipynb  03_alinet_dbp15k.ipynb  04_kecg_dbp15k.ipynb  05_gcnalign_dbp15k.ipynb  06_jape_dbp15k.ipynb  07_dgmc_dbp15k.ipynb  08_mraea_dbp15k.ipynb  09_rrea_dbp15k.ipynb
code/: LICENSE  README.md  pyproject.toml  setup.py
code/src/: __init__.py  data.py  main.py  trainer.py
code/src/models/: __init__.py  alinet.py  bootea.py  dgmc.py  gcnalign.py  jape.py  kecg.py  mraea.py  naea.py  rrea.py
code/src/utils/: __init__.py  config.py  logger.py  metrics.py  plotting.py  rescore.py
configs/: alinet_dbp15k.yaml  bootea_dbp15k.yaml  dgmc_dbp15k.yaml  gcnalign_dbp15k.yaml  jape_dbp15k.yaml  kecg_dbp15k.yaml  mraea_dbp15k.yaml  naea_dbp15k.yaml  rrea_dbp15k.yaml
docs/: about.md  getting-started.md  index.md  results.md  roadmap.md
docs/models/: alinet.md  bootea.md  dgmc.md  gcnalign.md  index.md  jape.md  kecg.md  mraea.md  naea.md  rrea.md
docs/stylesheets/: extra.css
experiments/: rescored_csls10.csv
experiments/alinet_zh_en_0_3_20260718-200239/: config_used.yaml  loss.csv  metrics.csv  training.txt
experiments/bootea_zh_en_0_3_20260718-042649/: config_used.yaml  loss.csv  metrics.csv  training.txt
experiments/dgmc_zh_en_20260718-202824/: config_used.yaml  loss.csv  metrics.csv  training.txt
experiments/gcnalign_zh_en_0_3_20260718-042428/: config_used.yaml  loss.csv  metrics.csv  training.txt
(+28 files in other folders)
