[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naea-dbp15k"
version = "0.1.0"
description = "Neighborhood-Aware Attentional Representation (NAEA) for multilingual KG entity alignment on DBP15K."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Nadjib ZAHAF", email = "zahafndjib@gmail.com" }]
keywords = ["entity-alignment", "knowledge-graph", "NAEA", "DBP15K", "graph-attention", "TransE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "PyYAML>=5.4",
]

[project.optional-dependencies]
notebook = ["jupyter", "ipykernel", "nbformat"]

[project.scripts]
nexus-train = "src.main:main"

[project.urls]
Repository = "https://github.com/Z-Nadjib/EntityAlignment-Nexus"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
